#ifndef __REC_WIDGET_WAVEFORM_WAVEFORMMODEL__
#define __REC_WIDGET_WAVEFORM_WAVEFORMMODEL__

#include "rec/base/base.h"

namespace rec {
namespace widget {
namespace waveform {

class WaveformModel {
 public:
  WaveformModel();

 private:
  DISALLOW_COPY_ASSIGN_AND_LEAKS(WaveformModel);
};

}  // namespace waveform
}  // namespace widget
}  // namespace rec

#endif  // __REC_WIDGET_WAVEFORM_WAVEFORMMODEL__
